[tool.poetry]
name = "gbfs"
version = "0.2.1"
description = "Graph-Based Feature-Selection Algorithms"
license = "MIT"
readme = "README.md"
authors = ["David Levin <davidlevin40@gmail.com>"]
keywords = [
    "feature-selection",
    "automatic-feature-selection",
    "clustering",
    "dimensionality-reduction",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

homepage = "https://github.com/davidlevinwork/gbfs/"
repository = "https://github.com/davidlevinwork/gbfs/"
documentation = "https://davidlevinwork.github.io/gbfs/"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
scikit-learn-extra = "^0.3.0"
kneed = "^0.8.5"
seaborn = "^0.13.2"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = {extras = ["imaging"], version = "^9.5.13"}

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poe.tasks]
# dev
lint = "ruff check ."
format = "ruff format ."
# docs
build = "mkdocs build"
serve = "mkdocs serve"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
